force-app/main/default/objects/DDRL_Column__c/DDRL_Column__c.object-meta.xml
<CustomObject>
    <label>DDRL Column</label>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DDRL Columns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>