force-app/main/default/objects/DDRL_Column__c/fields/alignment__c.field-meta.xml
<CustomField>
    <fullName>alignment__c</fullName>
    <label>Alignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>left</fullName>
            </value>
            <value>
                <fullName>center</fullName>
            </value>
            <value>
                <fullName>right</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>