force-app/main/default/objects/DDRL_Column__c/fields/config__c.field-meta.xml
<CustomField>
    <fullName>config__c</fullName>
    <label>DDRL Config</label>
    <referenceTo>DDRL_Config__c</referenceTo>
    <relationshipLabel>DDRL Columns</relationshipLabel>
    <relationshipName>DCRL_Columns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>