force-app/main/default/objects/DDRL_Column__c/fields/currencyCode__c.field-meta.xml
<CustomField>
    <fullName>currencyCode__c</fullName>
    <label>Currency Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>