force-app/main/default/objects/DDRL_Column__c/fields/decimalPlaces__c.field-meta.xml
<CustomField>
    <fullName>decimalPlaces__c</fullName>
    <label>Decimal Places</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>