force-app/main/default/objects/DDRL_Column__c/fields/displayType__c.field-meta.xml
<CustomField>
    <fullName>displayType__c</fullName>
    <label>Display Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>DateTime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>