force-app/main/default/objects/DDRL_Column__c/fields/isLink__c.field-meta.xml
<CustomField>
    <fullName>isLink__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Link</label>
    <type>Checkbox</type>
</CustomField>