force-app/main/default/objects/DDRL_Column__c/fields/linkFormat__c.field-meta.xml
<CustomField>
    <fullName>linkFormat__c</fullName>
    <label>Link Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>