force-app/main/default/objects/DDRL_Column__c/fields/month__c.field-meta.xml
<CustomField>
    <fullName>month__c</fullName>
    <label>Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2-digit</fullName>
                <default>true</default>
                <label>2-digit</label>
            </value>
            <value>
                <fullName>numeric</fullName>
            </value>
            <value>
                <fullName>narrow</fullName>
            </value>
            <value>
                <fullName>short</fullName>
            </value>
            <value>
                <fullName>long</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>