force-app/main/default/objects/DDRL_Column__c/fields/timeZone__c.field-meta.xml
<CustomField>
    <fullName>timeZone__c</fullName>
    <inlineHelpText>Long TZ Identifier for the time zone to display the date time field in.  Refer to https://en.wikipedia.org/wiki/List_of_tz_database_time_zones for all time zones.  NB: abbreviations like GMT+11 don&apos;t work.</inlineHelpText>
    <label>Time Zone</label>
    <length>55</length>
    <type>Text</type>
</CustomField>