force-app/main/default/objects/DDRL_Column__c/fields/width__c.field-meta.xml
<CustomField>
    <fullName>width__c</fullName>
    <label>Width (px)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>