force-app/main/default/objects/DDRL_Column__c/fields/wrapText__c.field-meta.xml
<CustomField>
    <fullName>wrapText__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wrap Long Text Fields</label>
    <type>Checkbox</type>
</CustomField>