force-app/main/default/objects/DDRL_Column__c/fields/year__c.field-meta.xml
<CustomField>
    <fullName>year__c</fullName>
    <label>Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>numeric</fullName>
                <default>true</default>
                <label>numeric</label>
            </value>
            <value>
                <fullName>2-digit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>